Fixed type spacing and increase font awesome icons

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 
 
 .card {
-  max-width:300px;
+  max-width:340px;
   border: 2px solid lightblue;
   padding-bottom: 20px;
   box-shadow: 7px 4px 30px 0px rgba(50, 50, 50, 0.2);
@@ -39,6 +39,14 @@
 
 
 /* Adding some card custom styles */
+
+.fa-awe {
+  padding: .5em;
+}
+
+.card-text {
+  padding: 1em;
+}
 
 .custom {
   width: 120px;
